src/objects/Comp_List__c.object
<CustomObject>
    <fields>
        <fullName>Comp_List__c</fullName>
        <label>Comp List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFT - Digital</fullName>
                </value>
                <value>
                    <fullName>AFT - Print</fullName>
                </value>
                <value>
                    <fullName>AHF - Digital</fullName>
                </value>
                <value>
                    <fullName>AHF - Print</fullName>
                </value>
                <value>
                    <fullName>AL - Digital</fullName>
                </value>
                <value>
                    <fullName>AL - Print</fullName>
                </value>
                <value>
                    <fullName>AQ - Digital</fullName>
                </value>
                <value>
                    <fullName>AQ - Print</fullName>
                </value>
                <value>
                    <fullName>AR - Digital</fullName>
                </value>
                <value>
                    <fullName>AR - Print</fullName>
                </value>
                <value>
                    <fullName>BD - Digital</fullName>
                </value>
                <value>
                    <fullName>BD - Print</fullName>
                </value>
                <value>
                    <fullName>CC - Digital</fullName>
                </value>
                <value>
                    <fullName>CCP - Digital</fullName>
                </value>
                <value>
                    <fullName>CCP - Print</fullName>
                </value>
                <value>
                    <fullName>CC - Print</fullName>
                </value>
                <value>
                    <fullName>CH - Digital</fullName>
                </value>
                <value>
                    <fullName>CH - Print</fullName>
                </value>
                <value>
                    <fullName>DB - Digital</fullName>
                </value>
                <value>
                    <fullName>DB - Print</fullName>
                </value>
                <value>
                    <fullName>EH - Digital</fullName>
                </value>
                <value>
                    <fullName>EH - Print</fullName>
                </value>
                <value>
                    <fullName>ES - Digital</fullName>
                </value>
                <value>
                    <fullName>ES - Print</fullName>
                </value>
                <value>
                    <fullName>JLC - Digital</fullName>
                </value>
                <value>
                    <fullName>JLC - Print</fullName>
                </value>
                <value>
                    <fullName>MF - Digital</fullName>
                </value>
                <value>
                    <fullName>MFE - Digital</fullName>
                </value>
                <value>
                    <fullName>MFE - Print</fullName>
                </value>
                <value>
                    <fullName>MF - Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comp Lists</relationshipLabel>
        <relationshipName>Comp_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Changed_On__c</fullName>
        <label>Status Changed On</label>
        <type>Date</type>
    </fields>
    <label>Comp List</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Comp Lists ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>